--- a/Anxiety 2.css
+++ b/Anxiety 2.css
@@ -24,10 +24,29 @@ h2 {
 
 main {
     position: relative;
-    font-size: 25px;
+    font-size: 20px;
     text-align: center;
     z-index: 1; /* Stay on top */
     color:rgb(2, 63, 63);
+}
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
 }
 
 .Home{
