--- a/Anxiety.css
+++ b/Anxiety.css
@@ -54,6 +54,25 @@ ul{
     list-style-type: none;
     padding-left: 0px;
 }
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
 
 /* NAVBAR */
 .TopOption {
@@ -71,7 +90,6 @@ ul{
     overflow-x: visible; 
     padding-top: 20px;
 }
-
 
 .sidenav a {
     padding: 6px 8px 30px 16px;
@@ -215,3 +233,17 @@ input[type=submit]:hover {
     border-radius: 4px;
   }
 
+  /* Create two equal columns that floats next to each other */
+.column2 {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 300px; /* Should be removed. Only for demonstration */
+}
+
+/* Clear floats after the columns */
+.row2:after {
+  content: "";
+  display: table;
+  clear: both;
+}
